--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -319,6 +319,14 @@ section h3 {
   }
 }
 
+form .subrecord-form .subrecord-form-container .subrecord-form-fields {
+  padding: 0;
+}
+
+form #terms .subrecord-form-fields {
+  padding: 10px;
+}
+
 ul.subrecord-form-list {
   margin: 0;
   > li {
