--- a/frontend/app/views/resources/edit.html.erb
+++ b/frontend/app/views/resources/edit.html.erb
@@ -1,6 +1,6 @@
 <%= setup_context :object => @resource %>
 
-<div class="row-fluid">
+<div class="row-fluid" xmlns="http://www.w3.org/1999/html">
   <div class="span12">
     <%= render :partial => "shared/tree" %>
   </div>
