--- a/frontend/app/views/users/show.html.erb
+++ b/frontend/app/views/users/show.html.erb
@@ -4,7 +4,8 @@
    <div class="span3">
 
    </div>
-   <div class="span9 record-pane">
+   <div class="span9">
+    <div class="record-pane">
      <%= readonly_context :user, @user.to_hash do |readonly| %>
       <h2><%= @user.name %>  <span class="label label-info"><%= I18n.t("user._html.singular") %></span></h2>
 
@@ -14,7 +15,7 @@
         <p>User info to be seen by other users.</p>
         
       </section>
-    <% end %>
-    
+     <% end %>
+    </div>
    </div>
 </div>
