--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -134,9 +134,25 @@ h2 > .label {
   font-size: @baseFontSize;
 }
 
-.record-pane > .btn-group {
-  float: right;
-  margin-top: 10px;
+.record-toolbar {
+  padding: 4px 5px;
+  position: relative;
+  background-color: #F3F3F3;
+  border-top: 1px solid #DDD;
+  border-left: 1px solid #DDD;
+  #gradient > .vertical(#F3F3F3, #EDEDED);
+  .box-shadow(~"1px 1px 2px rgba(0,0,0,.15)");
+  min-height: 2em;
+}
+
+.record-pane {
+  padding: 10px;
+  margin: 0;
+  overflow: hidden;
+
+  h2 {
+    margin-top: 0;
+  }
 }
 
 .dropdown-submenu a:focus .dropdown-menu {
