--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -1,9 +1,21 @@
 <%= setup_context(:object => @accession) %>
 
-<div class="row-fluid">
-  <div class="span12">
-    <%= render :partial => "shared/tree", :locals => {:tree => @accession_tree} %>
-  </div>
-</div>
+<div id="object_container">
+  <%= form_for @accession, :as => "accession", :url => {:action => :update}, :html => {:class => 'form-horizontal', :id => "accession_form"} do |f| %>
+    <%= form_context :accession, @accession.to_hash(true) do |form| %>
+      <div class="row-fluid">
+        <div class="span3">
+          <%= render :partial => "sidebar" %>
+        </div>
 
-<div id="object_container"></div>
+        <div class="span9">
+          <div class="record-pane">
+            <h2><%= @accession.title%> <span class="label label-info"><%= I18n.t("accession._html.singular") %></span></h2>
+            <input type="hidden" name="_method" value="put" />
+            <%= render :partial => "accessions/form", :locals => {:form => form} %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+</div>
