--- a/frontend/app/views/agents/new.html.erb
+++ b/frontend/app/views/agents/new.html.erb
@@ -6,15 +6,17 @@
       <div class="span3">
         <%= render :partial => "sidebar", :locals => {:form => form} %>
       </div>
-      <div class="span9 record-pane">
-        <h2><%= "New #{I18n.t("agent.agent_type.#{@agent.agent_type}")}" %>  <span class="label label-info"><%= I18n.t("agent._html.singular") %></span></h2>
-        <%= render :partial => "agents/form", :locals => {:form => form} %>
-        <div class="form-actions">
-          <div class="btn-group">
-            <button type="submit" class="btn btn-primary"><%= I18n.t "actions.save_prefix" %> <%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></button>
-            <button type="submit" id="createPlusOne" name="plus_one" class="btn btn-primary"><%= I18n.t("actions.save_plus_one") %></button>
+      <div class="span9">
+        <div class="record-pane">
+          <h2><%= "New #{I18n.t("agent.agent_type.#{@agent.agent_type}")}" %>  <span class="label label-info"><%= I18n.t("agent._html.singular") %></span></h2>
+          <%= render :partial => "agents/form", :locals => {:form => form} %>
+          <div class="form-actions">
+            <div class="btn-group">
+              <button type="submit" class="btn btn-primary"><%= I18n.t "actions.save_prefix" %> <%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></button>
+              <button type="submit" id="createPlusOne" name="plus_one" class="btn btn-primary"><%= I18n.t("actions.save_plus_one") %></button>
+            </div>
+            <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
           </div>
-          <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
         </div>
       </div>
     </div>
