--- a/frontend/app/views/collection_management_records/show.html.erb
+++ b/frontend/app/views/collection_management_records/show.html.erb
@@ -11,99 +11,95 @@
    <div class="span3">
       <%= render :partial => "sidebar" %>
    </div>
-   <div class="span9 record-pane">
-    <%= readonly_context :collection_management, @collection_management.to_hash(true) do |readonly| %>
-      <% if user_can?('update_repository') %>
-        <div class="btn-group" style="float: right">
-            <%= link_to I18n.t("actions.edit"), {:controller => :collection_management_records, :action => :edit, :id => @collection_management.id}, :class => "btn btn-small" %>
-          </div>
-        <% end %>
-
-        <h2><%= I18n.t("collection_management_record._html.title_prefix") %> <%= title %> <span class="label label-info"><%= I18n.t("collection_management_record._html.singular") %></span></h2>
-
-       <%= render :partial => "shared/flash_messages" %>
-
-        <section id="basic_information">
-          <h3><%= I18n.t("collection_management_record._html.section.basic_information") %></h3>
-
-          <div class="row-fluid label-and-value">
-             <div class="span3">Id</div>
-             <div class="span9"><%= @collection_management.id %></div>
-          </div>
-          <div class="row-fluid label-and-value">
-
-             <div class="span3"><%= I18n.t("collection_management.cataloged_note") %></div>
-             <div class="span9"><%= @collection_management.cataloged_note %></div>
-          </div>
-          <div class="row-fluid label-and-value">
-
-             <div class="span3"><%= I18n.t("collection_management.processing_hours_per_foot_estimate") %></div>
-             <div class="span9"><%= @collection_management.processing_hours_per_foot_estimate %></div>
-          </div>
-          <div class="row-fluid label-and-value">
-
-             <div class="span3"><%= I18n.t("collection_management.processing_total_extent") %></div>
-             <div class="span9"><%= @collection_management.processing_total_extent %></div>
-          </div>
-          <div class="row-fluid label-and-value">
-
-             <div class="span3"><%= I18n.t("collection_management.processing_total_extent_type") %></div>
-             <div class="span9"><%= I18n.t("collection_management.processing_total_extent_type_#{@collection_management.processing_total_extent_type}") %></div>
-          </div>
-          <div class="row-fluid label-and-value">
-
-             <div class="span3"><%= I18n.t("collection_management.processing_hours_total") %></div>
-             <div class="span9"><%= @collection_management.processing_hours_total %></div>
-          </div>
-          <div class="row-fluid label-and-value">
-
-             <div class="span3"><%= I18n.t("collection_management.processing_plan") %></div>
-             <div class="span9"><%= @collection_management.processing_plan %></div>
-          </div>
-          <div class="row-fluid label-and-value">
-
-             <div class="span3"><%= I18n.t("collection_management.processing_priority") %></div>
-             <div class="span9"><%= I18n.t("collection_management.processing_priority_#{@collection_management.processing_priority}") %></div>
-          </div>
-          <div class="row-fluid label-and-value">
-
-             <div class="span3"><%= I18n.t("collection_management.processing_status") %></div>
-             <div class="span9"><%= I18n.t("collection_management.processing_status_#{@collection_management.processing_status}") %></div>
-          </div>
-          <div class="row-fluid label-and-value">
-
-             <div class="span3"><%= I18n.t("collection_management.processors") %></div>
-             <div class="span9"><%= @collection_management.processors %></div>
-          </div>
-          <div class="row-fluid label-and-value">
-
-             <div class="span3"><%= I18n.t("collection_management.rights_determined") %></div>
-             <div class="span9"><%= @collection_management.rights_determined ? I18n.t("collection_management.rights_determined_true") : I18n.t("collection_management.rights_determined_false") %></div>
-
-          </div>
-        </section>
-
-        <section id="collection_management_linked_records_">
-          <h3><%= I18n.t("linked_record._html.plural") %></h3>
-          <div class="row-fluid label-and-value">
-             <div class="span3">
-              <% if @collection_management.linked_records.length > 1 %>
-                <%= I18n.t("linked_record.ref_plural") %>
-              <% else %>
-                <%= I18n.t("linked_record.ref") %>
-              <% end %>
-             </div>
-             <div class="span9 token-list">
-               <% @collection_management.linked_records.each do | ref | %>
-                <%= render_token :object => ref,
-                                  :label => ref["_resolved"]["title"],
-                                  :type => ref["_resolved"]["jsonmodel_type"],
-                                  :uri => ref["ref"] %>
-               <% end %>
-             </div>
-          </div>
-        </section>
-
-     <% end %>
-   </div>
+  <div class="span9">
+    <%= render :partial => "toolbar" %>
+    <div class="record-pane">
+      <%= readonly_context :collection_management, @collection_management.to_hash(true) do |readonly| %>
+         <h2><%= I18n.t("collection_management_record._html.title_prefix") %> <%= title %> <span class="label label-info"><%= I18n.t("collection_management_record._html.singular") %></span></h2>
+  
+         <%= render :partial => "shared/flash_messages" %>
+  
+          <section id="basic_information">
+            <h3><%= I18n.t("collection_management_record._html.section.basic_information") %></h3>
+  
+            <div class="row-fluid label-and-value">
+               <div class="span3">Id</div>
+               <div class="span9"><%= @collection_management.id %></div>
+            </div>
+            <div class="row-fluid label-and-value">
+  
+               <div class="span3"><%= I18n.t("collection_management.cataloged_note") %></div>
+               <div class="span9"><%= @collection_management.cataloged_note %></div>
+            </div>
+            <div class="row-fluid label-and-value">
+  
+               <div class="span3"><%= I18n.t("collection_management.processing_hours_per_foot_estimate") %></div>
+               <div class="span9"><%= @collection_management.processing_hours_per_foot_estimate %></div>
+            </div>
+            <div class="row-fluid label-and-value">
+  
+               <div class="span3"><%= I18n.t("collection_management.processing_total_extent") %></div>
+               <div class="span9"><%= @collection_management.processing_total_extent %></div>
+            </div>
+            <div class="row-fluid label-and-value">
+  
+               <div class="span3"><%= I18n.t("collection_management.processing_total_extent_type") %></div>
+               <div class="span9"><%= I18n.t("collection_management.processing_total_extent_type_#{@collection_management.processing_total_extent_type}") %></div>
+            </div>
+            <div class="row-fluid label-and-value">
+  
+               <div class="span3"><%= I18n.t("collection_management.processing_hours_total") %></div>
+               <div class="span9"><%= @collection_management.processing_hours_total %></div>
+            </div>
+            <div class="row-fluid label-and-value">
+  
+               <div class="span3"><%= I18n.t("collection_management.processing_plan") %></div>
+               <div class="span9"><%= @collection_management.processing_plan %></div>
+            </div>
+            <div class="row-fluid label-and-value">
+  
+               <div class="span3"><%= I18n.t("collection_management.processing_priority") %></div>
+               <div class="span9"><%= I18n.t("collection_management.processing_priority_#{@collection_management.processing_priority}") %></div>
+            </div>
+            <div class="row-fluid label-and-value">
+  
+               <div class="span3"><%= I18n.t("collection_management.processing_status") %></div>
+               <div class="span9"><%= I18n.t("collection_management.processing_status_#{@collection_management.processing_status}") %></div>
+            </div>
+            <div class="row-fluid label-and-value">
+  
+               <div class="span3"><%= I18n.t("collection_management.processors") %></div>
+               <div class="span9"><%= @collection_management.processors %></div>
+            </div>
+            <div class="row-fluid label-and-value">
+  
+               <div class="span3"><%= I18n.t("collection_management.rights_determined") %></div>
+               <div class="span9"><%= @collection_management.rights_determined ? I18n.t("collection_management.rights_determined_true") : I18n.t("collection_management.rights_determined_false") %></div>
+  
+            </div>
+          </section>
+  
+          <section id="collection_management_linked_records_">
+            <h3><%= I18n.t("linked_record._html.plural") %></h3>
+            <div class="row-fluid label-and-value">
+               <div class="span3">
+                <% if @collection_management.linked_records.length > 1 %>
+                  <%= I18n.t("linked_record.ref_plural") %>
+                <% else %>
+                  <%= I18n.t("linked_record.ref") %>
+                <% end %>
+               </div>
+               <div class="span9 token-list">
+                 <% @collection_management.linked_records.each do | ref | %>
+                  <%= render_token :object => ref,
+                                    :label => ref["_resolved"]["title"],
+                                    :type => ref["_resolved"]["jsonmodel_type"],
+                                    :uri => ref["ref"] %>
+                 <% end %>
+               </div>
+            </div>
+          </section>
+       <% end %>
+    </div>
+  </div>
 </div>
