--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -2,58 +2,50 @@
   <div class="span3">
     <%= render :partial => "sidebar" %>
   </div>
-  <div class="span9 record-pane">
-    <%= readonly_context :digital_object_component, @digital_object_component.to_hash(true) do |readonly| %>
+  <div class="span9">
+    <%= render :partial => "toolbar" %>
+    <div class="record-pane">
+      <%= readonly_context :digital_object_component, @digital_object_component.to_hash(true) do |readonly| %>
+        <h2><%= @digital_object_component.title %> <span class="label label-info"><%= I18n.t("digital_object_component._html.singular") %></span></h2>
+        <section id="basic_information">
+          <h3><%= I18n.t("digital_object_component._html.section.basic_information") %></h3>
+  
+          <%= readonly.label_and_textfield "label" %>
+          <%= readonly.label_and_textfield "title" %>
+          <%= readonly.label_and_textfield "component_id" %>
+          <%= readonly.label_and_boolean "publish" %>
+          <%= readonly.label_and_select "language", readonly.possible_options_for("language") %>
 
-      <div class="btn-group" style="float: right">
-         <% if @digital_object_id %>
-            <% if user_can?('update_repository') %>
-              <%= link_to I18n.t("actions.edit"), {:controller => :digital_objects, :action => :edit, :id => @digital_object_id, :anchor => "digital_object_component_#{@digital_object_component.id}"}, :class => "btn btn-small" %>
-            <% end %>
-         <% end %>
-      </div>
+        </section>
 
-      <h2><%= @digital_object_component.title %> <span class="label label-info"><%= I18n.t("digital_object_component._html.singular") %></span></h2>
-      <section id="basic_information">
-        <h3><%= I18n.t("digital_object_component._html.section.basic_information") %></h3>
+        <% if @digital_object_component.extents.length > 0 %>
+          <%= render :partial => "extents/show", :locals => { :extents => @digital_object_component.extents, :section_id => "digital_object_component_extents_" } %>
+        <% end %>
 
-        <%= readonly.label_and_textfield "label" %>
-        <%= readonly.label_and_textfield "title" %>
-        <%= readonly.label_and_textfield "component_id" %>
-        <%= readonly.label_and_boolean "publish" %>
-        <%= readonly.label_and_select "language", readonly.possible_options_for("language") %>
+        <% if @digital_object_component.dates.length > 0 %>
+          <%= render :partial => "dates/show", :locals => { :dates => @digital_object_component.dates, :section_id => "digital_object_component_dates_" } %>
+        <% end %>
 
-      </section>
+        <% if @digital_object_component.linked_agents.length > 0 %>
+          <%= render :partial => "linked_agents/show", :locals => { :linked_agents => @digital_object_component.linked_agents, :section_id => "digital_object_component_linked_agents_" } %>
+        <% end %>
 
-      <% if @digital_object_component.extents.length > 0 %>
-        <%= render :partial => "extents/show", :locals => { :extents => @digital_object_component.extents, :section_id => "digital_object_component_extents_" } %>
+        <% if not @digital_object_component.subjects.blank? %>
+          <%= render :partial => "subjects/show_inline", :locals => {:subjects => @digital_object_component.subjects, :section_id => "digital_object_component_subjects_"} %>
+        <% end %>
+
+        <% if @digital_object_component.notes.length > 0 %>
+          <%= render :partial => "notes/show", :locals => { :notes => @digital_object_component.notes, :context => readonly } %>
+        <% end %>
+
+        <% if @digital_object_component.external_documents.length > 0 %>
+          <%= render :partial => "external_documents/show", :locals => { :external_documents => @digital_object_component.external_documents, :section_id => "digital_object_component_external_documents_" } %>
+        <% end %>
+
+        <% if @digital_object_component.rights_statements.length > 0 %>
+          <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @digital_object_component.rights_statements, :section_id => "digital_object_component_rights_statements_"  } %>
+        <% end %>
       <% end %>
-
-      <% if @digital_object_component.dates.length > 0 %>
-        <%= render :partial => "dates/show", :locals => { :dates => @digital_object_component.dates, :section_id => "digital_object_component_dates_" } %>
-      <% end %>
-
-      <% if @digital_object_component.linked_agents.length > 0 %>
-        <%= render :partial => "linked_agents/show", :locals => { :linked_agents => @digital_object_component.linked_agents, :section_id => "digital_object_component_linked_agents_" } %>
-      <% end %>
-      
-      <% if not @digital_object_component.subjects.blank? %>
-        <%= render :partial => "subjects/show_inline", :locals => {:subjects => @digital_object_component.subjects, :section_id => "digital_object_component_subjects_"} %>
-      <% end %>
-      
-      <% if @digital_object_component.notes.length > 0 %>
-        <%= render :partial => "notes/show", :locals => { :notes => @digital_object_component.notes, :context => readonly } %>
-      <% end %>
-
-      <% if @digital_object_component.external_documents.length > 0 %>
-        <%= render :partial => "external_documents/show", :locals => { :external_documents => @digital_object_component.external_documents, :section_id => "digital_object_component_external_documents_" } %>
-      <% end %>
-
-      <% if @digital_object_component.rights_statements.length > 0 %>
-        <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @digital_object_component.rights_statements, :section_id => "digital_object_component_rights_statements_"  } %>
-      <% end %>
-
-    <% end %>
-
+    </div>
   </div>
 </div>
