--- a/frontend/app/views/digital_objects/_show_inline.html.erb
+++ b/frontend/app/views/digital_objects/_show_inline.html.erb
@@ -2,54 +2,53 @@
   <div class="span3">
     <%= render :partial => "digital_objects/sidebar" %>
   </div>
-  <div class="span9 record-pane">
-    <%= readonly_context :digital_object, @digital_object.to_hash(true) do |readonly| %>
-      <div class="btn-group" style="float: right">
-        <% if user_can?('update_repository') %>
-          <%= link_to I18n.t("actions.edit"), {:controller => :digital_objects, :action => :edit, :id => @digital_object.id, :anchor => "digital_object_#{@digital_object.id}"}, :class => "btn btn-small" %>
+  <div class="span9">
+    <%= render :partial => "toolbar" %>
+    <div class="record-pane">
+      <%= readonly_context :digital_object, @digital_object.to_hash(true) do |readonly| %>
+        <h2><%= @digital_object.title %> <span class="label label-info"><%= I18n.t("digital_object._html.singular") %></span></h2>
+        <section id="basic_information">
+          <h3><%= I18n.t("digital_object._html.section.basic_information") %></h3>
+  
+          <%= readonly.label_and_textfield "title" %>
+          <%= readonly.label_and_textfield "digital_object_id" %>
+          <%= readonly.label_and_boolean "publish" %>
+          <%= readonly.label_and_select "level", readonly.possible_options_for("level") %>
+          <%= readonly.label_and_select "digital_object_type", readonly.possible_options_for("digital_object_type") %>
+          <%= readonly.label_and_select "language", readonly.possible_options_for("language") %>
+          <%= readonly.label_and_boolean "restrictions" %>
+  
+        </section>
+
+        <% if @digital_object.linked_agents.length > 0 %>
+          <%= render :partial => "linked_agents/show", :locals => { :linked_agents => @digital_object.linked_agents, :section_id => "digital_object_linked_agents_" } %>
         <% end %>
-      </div>
-      <h2><%= @digital_object.title %> <span class="label label-info"><%= I18n.t("digital_object._html.singular") %></span></h2>
-      <section id="basic_information">
-        <h3><%= I18n.t("digital_object._html.section.basic_information") %></h3>
 
-        <%= readonly.label_and_textfield "title" %>
-        <%= readonly.label_and_textfield "digital_object_id" %>
-        <%= readonly.label_and_boolean "publish" %>
-        <%= readonly.label_and_select "level", readonly.possible_options_for("level") %>
-        <%= readonly.label_and_select "digital_object_type", readonly.possible_options_for("digital_object_type") %>
-        <%= readonly.label_and_select "language", readonly.possible_options_for("language") %>
-        <%= readonly.label_and_boolean "restrictions" %>
+        <% if not @digital_object.subjects.blank? %>
+          <%= render :partial => "subjects/show_inline", :locals => {:subjects => @digital_object.subjects, :section_id => "digital_object_subjects_"} %>
+        <% end %>
 
-      </section>
+        <% if @digital_object.notes.length > 0 %>
+          <%= render :partial => "notes/show", :locals => { :notes => @digital_object.notes, :context => readonly } %>
+        <% end %>
 
-      <% if @digital_object.linked_agents.length > 0 %>
-        <%= render :partial => "linked_agents/show", :locals => { :linked_agents => @digital_object.linked_agents, :section_id => "digital_object_linked_agents_" } %>
+        <% if @digital_object.extents.length > 0 %>
+          <%= render :partial => "extents/show", :locals => { :extents => @digital_object.extents, :section_id => "digital_object_extents_" } %>
+        <% end %>
+
+        <% if @digital_object.dates.length > 0 %>
+          <%= render :partial => "dates/show", :locals => { :dates => @digital_object.dates, :section_id => "digital_object_dates_" } %>
+        <% end %>
+
+        <% if @digital_object.external_documents.length > 0 %>
+          <%= render :partial => "external_documents/show", :locals => { :external_documents => @digital_object.external_documents, :section_id => "digital_object_external_documents_"  } %>
+        <% end %>
+
+        <% if @digital_object.rights_statements.length > 0 %>
+          <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @digital_object.rights_statements, :section_id => "digital_object_rights_statements_"  } %>
+        <% end %>
+
       <% end %>
-      
-      <% if not @digital_object.subjects.blank? %>
-        <%= render :partial => "subjects/show_inline", :locals => {:subjects => @digital_object.subjects, :section_id => "digital_object_subjects_"} %>
-      <% end %>
-
-      <% if @digital_object.notes.length > 0 %>
-        <%= render :partial => "notes/show", :locals => { :notes => @digital_object.notes, :context => readonly } %>
-      <% end %>
-
-      <% if @digital_object.extents.length > 0 %>
-        <%= render :partial => "extents/show", :locals => { :extents => @digital_object.extents, :section_id => "digital_object_extents_" } %>
-      <% end %>
-
-      <% if @digital_object.dates.length > 0 %>
-        <%= render :partial => "dates/show", :locals => { :dates => @digital_object.dates, :section_id => "digital_object_dates_" } %>
-      <% end %>
-
-      <% if @digital_object.external_documents.length > 0 %>
-        <%= render :partial => "external_documents/show", :locals => { :external_documents => @digital_object.external_documents, :section_id => "digital_object_external_documents_"  } %>
-      <% end %>
-
-      <% if @digital_object.rights_statements.length > 0 %>
-        <%= render :partial => "rights_statements/show", :locals => { :rights_statements => @digital_object.rights_statements, :section_id => "digital_object_rights_statements_"  } %>
-      <% end %>
-    <% end %>
+    </div>
   </div>
 </div>
