--- a/frontend/app/views/events/edit.html.erb
+++ b/frontend/app/views/events/edit.html.erb
@@ -6,13 +6,15 @@
       <div class="span3">
         <%= render :partial => "sidebar" %>
       </div>
-      <div class="span9 record-pane">
-        <h2><%= I18n.t("event._html.singular") %> <%= @event.id %>  <span class="label label-info"><%= I18n.t("event._html.singular") %></span></h2>
+      <div class="span9">
+        <div class="record-pane">
+          <h2><%= I18n.t("event._html.singular") %> <%= @event.id %>  <span class="label label-info"><%= I18n.t("event._html.singular") %></span></h2>
 
-        <%= render :partial => "events/form", :locals => {:form => form} %>
-        <div class="form-actions">
-          <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("event._html.singular") %></button>
-          <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
+          <%= render :partial => "events/form", :locals => {:form => form} %>
+          <div class="form-actions">
+            <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("event._html.singular") %></button>
+            <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
+          </div>
         </div>
       </div>
     </div>
