--- a/frontend/app/views/events/index.html.erb
+++ b/frontend/app/views/events/index.html.erb
@@ -4,7 +4,8 @@
    <div class="span3">
       The facets/search filters will go here.
    </div>
-   <div class="span9 record-pane">
+   <div class="span9">
+    <div class="record-pane">
       <div class="btn-group">
         <% if user_can?('update_repository') %>
           <%= link_to "#{I18n.t("actions.create")} #{I18n.t("event._html.singular")}", {:controller => :events, :action => :new}, :class => "btn" %>
@@ -42,5 +43,6 @@
             There are currently no accessions in this, <strong><%= session[:repo] %></strong>, repository.
          </p>
       <% end %>
+     </div>
    </div>
 </div>
