--- a/frontend/app/views/groups/index.erb
+++ b/frontend/app/views/groups/index.erb
@@ -4,7 +4,8 @@
    <div class="span3">
    </div>
 
-   <div class="span9 record-pane">
+  <div class="span9">
+    <div class="record-pane">
      <div class="btn-group">
        <%= link_to "#{I18n.t("actions.create")} #{I18n.t("group._html.singular")}", {:controller => :groups, :action => :new}, :class => "btn" %>
      </div>
@@ -29,5 +30,6 @@
          <% end %>
        </tbody>
      </table>
+    </div>
    </div>
 </div>
