--- a/frontend/app/views/resources/new.html.erb
+++ b/frontend/app/views/resources/new.html.erb
@@ -6,13 +6,15 @@
        <div class="span3">
           <%= render :partial => "resources/sidebar" %>
        </div> <!-- span3 -->
-       <div class="span9 record-pane" id="object_container">
+       <div class="span9">
+         <div class="record-pane" id="object_container">
 
-         <%= render :partial => "resources/form_container", :locals => {:form => form} %>
+           <%= render :partial => "resources/form_container", :locals => {:form => form} %>
 
-         <div class="form-actions">
-            <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("resource._html.singular") %></button>
-            <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
+           <div class="form-actions">
+              <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("resource._html.singular") %></button>
+              <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
+           </div>
          </div>
        </div>
     </div>
