--- a/frontend/app/views/shared/_breadcrumb.html.erb
+++ b/frontend/app/views/shared/_breadcrumb.html.erb
@@ -17,6 +17,10 @@
           <li class="return-to-search pull-right">
             <%= link_to "Return to Search Results", session[:recent_searches][params["search_token"].to_i].delete_if {|k, v| k === "timestamp" }, :class => "btn btn-small" %>
           </li>
+        <% elsif flash.key? :spawned_from_accession %>
+          <li class="return-to-search pull-right">
+            <%= link_to "Return to Accession", {:controller => :accessions, :action => :show, :id => flash[:spawned_from_accession]}, :class => "btn btn-small" %>
+          </div>
         <% end %>
       </ul>
    </div>
