--- a/frontend/app/views/subjects/edit.html.erb
+++ b/frontend/app/views/subjects/edit.html.erb
@@ -6,13 +6,15 @@
       <div class="span3">
         <%= render :partial => "sidebar" %>
       </div>
-      <div class="span9 record-pane">
-        <h2><%= @subject.display_string %>  <span class="label label-info"><%= I18n.t("subject._html.singular") %></span></h2>
-        <br/>
-        <%= render :partial => "subjects/form", :locals => {:form => form} %>
-        <div class="form-actions">
-          <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("subject._html.singular") %></button>
-          <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
+      <div class="span9">
+        <div class="record-pane">
+          <h2><%= @subject.display_string %>  <span class="label label-info"><%= I18n.t("subject._html.singular") %></span></h2>
+          <br/>
+          <%= render :partial => "subjects/form", :locals => {:form => form} %>
+          <div class="form-actions">
+            <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("subject._html.singular") %></button>
+            <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
+          </div>
         </div>
       </div>
     </div>
