--- a/frontend/app/views/subjects/new.html.erb
+++ b/frontend/app/views/subjects/new.html.erb
@@ -6,16 +6,18 @@
       <div class="span3">
         <%= render :partial => "sidebar" %>
       </div>
-      <div class="span9 record-pane">
-        <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("subject._html.singular") %>  <span class="label label-info"><%= I18n.t("subject._html.singular") %></span></h2>
-        <br/>
-        <%= render :partial => "subjects/form", :locals => {:form => form} %>
-        <div class="form-actions">
-          <div class="btn-group">
-            <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("subject._html.singular") %></button>
-            <button type="submit" name="plus_one" class="btn btn-primary"><%= I18n.t("actions.save_plus_one") %></button>
+      <div class="span9">
+        <div class="record-pane">
+          <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("subject._html.singular") %>  <span class="label label-info"><%= I18n.t("subject._html.singular") %></span></h2>
+          <br/>
+          <%= render :partial => "subjects/form", :locals => {:form => form} %>
+          <div class="form-actions">
+            <div class="btn-group">
+              <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("subject._html.singular") %></button>
+              <button type="submit" name="plus_one" class="btn btn-primary"><%= I18n.t("actions.save_plus_one") %></button>
+            </div>
+            <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
           </div>
-          <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
         </div>
       </div>
     </div>
