--- a/frontend/app/views/users/index.html.erb
+++ b/frontend/app/views/users/index.html.erb
@@ -10,7 +10,8 @@
    <div class="span3">
       The facets/search filters will go here.
    </div>
-   <div class="span9 record-pane">
+   <div class="span9">
+    <div class="record-pane">
       <div class="btn-group">
         <%= link_to "#{I18n.t("actions.create")} #{I18n.t("user._html.singular")}", {:controller => :users, :action => :new}, :class => "btn" %>
       </div>
@@ -43,5 +44,6 @@
             No Users.
          </p>
       <% end %>
+     </div>
    </div>
 </div>
